; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_cmp_32_pcdi.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopac.c_m68k_op_cmp_32_pcdi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i64 0, align 8
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_cmp_32_pcdi() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = call i64 (...) @OPER_PCDI_32()
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* @DX, align 8
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* %1, align 8
  %8 = sub nsw i64 %6, %7
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @NFLAG_32(i64 %9)
  store i32 %10, i32* @FLAG_N, align 4
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @MASK_OUT_ABOVE_32(i64 %11)
  store i32 %12, i32* @FLAG_Z, align 4
  %13 = load i64, i64* %1, align 8
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @VFLAG_SUB_32(i64 %13, i64 %14, i64 %15)
  store i32 %16, i32* @FLAG_V, align 4
  %17 = load i64, i64* %1, align 8
  %18 = load i64, i64* %2, align 8
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @CFLAG_SUB_32(i64 %17, i64 %18, i64 %19)
  store i32 %20, i32* @FLAG_C, align 4
  ret void
}

declare dso_local i64 @OPER_PCDI_32(...) #1

declare dso_local i32 @NFLAG_32(i64) #1

declare dso_local i32 @MASK_OUT_ABOVE_32(i64) #1

declare dso_local i32 @VFLAG_SUB_32(i64, i64, i64) #1

declare dso_local i32 @CFLAG_SUB_32(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
